# Alx_DjangoLearnLab

./: requirements.txt
Introduction_to_Django/LibraryProject/: README.md  db.sqlite3
advanced-api-project/: db.sqlite3
advanced-api-project/advanced-api-project/: requirements.txt
advanced-api-project/advanced_api_project/: db.sqlite3  settings.py
advanced-api-project/api/: models.py  serializers.py  test_views.py  urls.py  views.py
advanced_features_and_security/: README.md
advanced_features_and_security/LibraryProject/: db.sqlite3
api_project/: db.sqlite3
api_project/api/: models.py  serializer.py  urls.py  views.py
api_project/api_project/: settings.py
django-models/LibraryProject/: CRUD_operations.md
django_blog/: AUTHENTICATION.md  README.md
django_blog/blog/: admin.py  forms.py  models.py  urls.py  views.py
django_blog/django_blog/: settings.py  urls.py
social_media_api/: .gitignore  Procfile  build_files.sh  pyproject.toml  requirements.txt  vercel.json
social_media_api/accounts/: models.py  serializers.py  signals.py  urls.py  views.py
social_media_api/accounts/migrations/: 0001_initial.py  0002_user_following.py  0002_user_profile_delete_useraccount.py
social_media_api/notifications/: models.py  serializers.py  views.py
social_media_api/notifications/migrations/: 0001_initial.py
social_media_api/posts/: models.py  permissions.py  serializers.py  urls.py  views.py
social_media_api/posts/migrations/: 0001_initial.py  0002_like.py
social_media_api/social_media_api/: .vercelignore  settings.py  urls.py  wsgi.py
(+68 files in other folders)
